@@ -3055,3 +3055,6 @@
          (Fred).
 20090211 joystick.[ch],ui/gtk/gtkui.c,ui/widget/widget.c: remove duplication of
          joystick_connection array (patch #1991669) (Gergely Szasz).
+20090301 options.pl,select.c: allow the use of the home and end keys in option
+         and selection dialogs in the widget UIs (patch #2637459) (Gergely
+         Szasz).
